New page version

--- a/books/svd/index.html
+++ b/books/svd/index.html
@@ -223,7 +223,7 @@
       <span class="mx-1">&middot;</span>
       <span>2002</span>
       <span class="mx-1">&middot;</span>
-      <span>★★★★★</span>
+      <span>★★★★</span>
     </div>
   </header>
 
